--- a/src/agency/akcom/gwt/client/test-form.css
+++ b/src/agency/akcom/gwt/client/test-form.css
@@ -50,7 +50,7 @@ input[type="text"] {
     padding: 10px 5px 10px 20px;
     text-indent: 20px;
     margin-bottom: 20px;
-    border-radius: 4px 4px 0 0;
+    border-radius: 4px 4px 4px 4px;
 }
 select {
     flex-direction: column;
